feat: use the new resources if we want to insert a student in a group