@@ -1,5 +1,6 @@
 package school.hei.haapi.endpoint.rest.mapper;
 
+import static java.util.stream.Collectors.toList;
 import static school.hei.haapi.endpoint.rest.mapper.FileInfoMapper.ONE_DAY_DURATION_AS_LONG;
 
 import java.util.Optional;
@@ -9,6 +10,7 @@ import school.hei.haapi.endpoint.rest.model.*;
 import school.hei.haapi.model.GroupAttender;
 import school.hei.haapi.model.User;
 import school.hei.haapi.model.WorkDocument;
+import school.hei.haapi.service.GroupAttenderService;
 import school.hei.haapi.service.GroupService;
 import school.hei.haapi.service.WorkDocumentService;
 import school.hei.haapi.service.aws.FileService;
@@ -22,6 +24,7 @@ public class UserMapper {
   private final FileService fileService;
   private final GroupService groupService;
   private final GroupMapper groupMapper;
+  private final GroupAttenderService groupAttenderService;
 
   public UserIdentifier toIdentifier(User user) {
     return new UserIdentifier()
@@ -61,7 +64,12 @@ public class UserMapper {
     restStudent.setSpecializationField(user.getSpecializationField());
     restStudent.setProfilePicture(url);
     restStudent.groups(
-        groupService.getByUserId(user.getId()).stream().map(groupMapper::toRest).toList());
+        groupAttenderService.getAllByStudentId(user.getId()).stream()
+            .map(GroupAttender::getGroup)
+            .collect(toList())
+            .stream()
+            .map(groupMapper::toRest)
+            .toList());
     restStudent.setCoordinates(
         new Coordinates().longitude(user.getLongitude()).latitude(user.getLatitude()));
     restStudent.setHighSchoolOrigin(user.getHighSchoolOrigin());
@@ -99,7 +107,12 @@ public class UserMapper {
     restStudent.setSpecializationField(user.getSpecializationField());
     restStudent.setProfilePicture(url);
     restStudent.groups(
-        groupService.getByUserId(user.getId()).stream().map(groupMapper::toRest).toList());
+        groupAttenderService.getAllByStudentId(user.getId()).stream()
+            .map(GroupAttender::getGroup)
+            .collect(toList())
+            .stream()
+            .map(groupMapper::toRest)
+            .toList());
     restStudent.setCoordinates(
         new Coordinates().longitude(user.getLongitude()).latitude(user.getLatitude()));
     restStudent.setHighSchoolOrigin(user.getHighSchoolOrigin());
